# sv_parser

./: .gitignore  README.md  filelist  makefile  note.md  note_data_arc.json  pyproject.toml  rtl_scan.spec  run.py  run_sv.py  run_v.py  test.sv  test.v  vtool.py  vtool_inst.py  vtool_io.py
backend/: app.py  common.mk  config.py  makefile  requirements.txt  test_demo_data.py
backend/api/: handlers.py  routes.py
backend/data/: __init__.py  base_types.py  connection_models.py  design_models.py  module_models.py  port_models.py
frontend/: package-lock.json  package.json
frontend/public/: gpio_demo_design.json  index.html
frontend/src/: App.js
frontend/src/components/: ChipVisualization.js  FileUpload.js  HierarchyNavigator.js  HierarchyView.js  ModuleNode.js  ModuleSymbol.js  ProcessManager.js  SchematicViewer.js  SignalWire.js
frontend/src/components/schematic/: eventHandlerUtils.js  forceDirectedUtils.js  moduleLayoutUtils.js  (+5 more)
frontend/src/styles/: App.css  Header.css  HierarchyNavigator.css  Logs.css  ModuleSymbol.css  SchematicViewer.css  SignalWire.css
frontend/src/utils/: portRenderUtils.js
packaging/: Dockerfile  build.sh  rtl_scan.spec
src/: ParseResult.py  __init__.py  __main__.py  ast_utils.py  data_model.py  extractors.py  file_discovery.py  formatter.py  hierarchy.py  log.py  port_classify.py  preprocessor.py  rtl_scan.py  vModule.py  vModuleInstance.py  verilog_parser.py  version.py
test/: conftest.py  test_gpio.py  test_multi.py  test_rtl_scan.py
test/fixtures/: guarded_defs.vh  guarded_include.v  macro_inst.v  test.v  verilog95_macro.v
