[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rtl_scan"
version = "0.2.0"
description = "Verilog/SystemVerilog RTL structure analysis tool"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "zhhe", email = "Johnmc104@qq.com"},
]

dependencies = [
    "antlr4-python3-runtime==4.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
rtl_scan = "src.__main__:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
